--- a/index2.html
+++ b/index2.html
@@ -49,7 +49,7 @@
 
     <!-- Tambahkan elemen untuk halaman utama -->
     <div id="homePage">
-        <h1>Welcome to Spotify!</h1>
+        <h1>Welcome to Spotity!</h1>
         <p>Explore, Listen, and Discover Music.</p>
         <a href="index.html" class="large-button">Go to Main Menu</a>
         <button onclick="goToViewProfile()" class="small-button">View Profile</button>
